Partner A Merged Edits

--- a/lec02.ipynb
+++ b/lec02.ipynb
@@ -392,6 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Exponentiation First!\n",
     "5 * 2 ** 3"
    ]
   },
@@ -401,6 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Multiplication First!\n",
     "(5 * 2) ** 3"
    ]
   },
@@ -1641,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1658,8 @@
     }
    ],
    "source": [
-    "5*2 ** 3"
+    "# Exponentiation First!\n",
+    "3 * 4 ** 2"
    ]
   },
   {
@@ -1666,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1684,8 @@
     }
    ],
    "source": [
-    "(5*2) ** 3"
+    "# Multiplication First!\n",
+    "(3 * 4) ** 2"
    ]
   },
   {
